--- a/pom.xml
+++ b/pom.xml
@@ -7,12 +7,12 @@
   <parent>
     <groupId>com.epam.digital.data.platform</groupId>
     <artifactId>low-code-platform-parent</artifactId>
-    <version>1.3.0-SNAPSHOT</version>
+    <version>1.2.0</version>
     <relativePath/>
   </parent>
 
   <artifactId>ddm-starter-juel-function</artifactId>
-  <version>1.3.1-SNAPSHOT</version>
+  <version>1.4.0-SNAPSHOT</version>
 
   <properties>
     <sonar.coverage.exclusions>**/digital/data/platform/el/juel/dto/**/*</sonar.coverage.exclusions>
@@ -23,8 +23,8 @@
 
     <spring.boot.version>2.3.9.RELEASE</spring.boot.version>
 
-    <ddm-starter-security.version>1.3.0-SNAPSHOT</ddm-starter-security.version>
-    <ddm-ceph-client.version>1.3.1-SNAPSHOT</ddm-ceph-client.version>
+    <ddm-starter-security.version>1.2.1</ddm-starter-security.version>
+    <ddm-ceph-client.version>1.3.0</ddm-ceph-client.version>
 
     <guava.version>29.0-jre</guava.version>
     <camunda.bpm.assert.version>7.0.0</camunda.bpm.assert.version>
