--- a/src/it/resources/application-test.yml
+++ b/src/it/resources/application-test.yml
@@ -4,3 +4,10 @@ spring:
     url: jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
     username: bpms
     password: password
+
+system-user:
+  keycloak:
+    url: http://localhost:8200/auth
+    realm: test-realm
+    client-id: client-id
+    client-secret: client-secret
