--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,8 @@
 
     <spring.boot.version>2.3.9.RELEASE</spring.boot.version>
 
-    <ddm-starter-security.version>1.2.1</ddm-starter-security.version>
-    <ddm-ceph-client.version>1.3.0</ddm-ceph-client.version>
+    <ddm-starter-security.version>1.2.1-SNAPSHOT</ddm-starter-security.version>
+    <ddm-ceph-client.version>1.4.0-SNAPSHOT</ddm-ceph-client.version>
 
     <keycloak-admin-client.version>13.0.1</keycloak-admin-client.version>
 
