--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 
     <spring.boot.version>2.3.9.RELEASE</spring.boot.version>
 
-    <ddm-starter-security.version>1.2.1</ddm-starter-security.version>
+    <ddm-starter-security.version>1.5.0-SNAPSHOT</ddm-starter-security.version>
     <ddm-ceph-client.version>1.4.0</ddm-ceph-client.version>
     <ddm-bpm-data-accessor.version>1.5.1-SNAPSHOT</ddm-bpm-data-accessor.version>
 
