--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
 
     <ddm-starter-security.version>1.2.1</ddm-starter-security.version>
     <ddm-ceph-client.version>1.4.0</ddm-ceph-client.version>
+    <ddm-bpm-data-accessor.version>1.5.1-SNAPSHOT</ddm-bpm-data-accessor.version>
 
     <keycloak-admin-client.version>13.0.1</keycloak-admin-client.version>
 
@@ -59,6 +60,11 @@
       <groupId>com.epam.digital.data.platform</groupId>
       <artifactId>ddm-ceph-client</artifactId>
       <version>${ddm-ceph-client.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.epam.digital.data.platform</groupId>
+      <artifactId>ddm-bpm-data-accessor</artifactId>
+      <version>${ddm-bpm-data-accessor.version}</version>
     </dependency>
 
     <dependency>
