--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   </parent>
 
   <artifactId>ddm-starter-juel-function</artifactId>
-  <version>1.5.5-SNAPSHOT</version>
+  <version>1.5.6-SNAPSHOT</version>
 
   <properties>
     <sonar.coverage.exclusions>**/digital/data/platform/el/juel/dto/**/*</sonar.coverage.exclusions>
@@ -25,8 +25,7 @@
     <ddm-starter-security.version>1.5.1-SNAPSHOT</ddm-starter-security.version>
     <ddm-form-data-storage.version>1.5.2-SNAPSHOT</ddm-form-data-storage.version>
     <ddm-bpm-data-accessor.version>1.5.7-SNAPSHOT</ddm-bpm-data-accessor.version>
-
-    <keycloak-admin-client.version>13.0.1</keycloak-admin-client.version>
+    <ddm-idm-client.version>1.5.0-SNAPSHOT</ddm-idm-client.version>
 
     <guava.version>29.0-jre</guava.version>
     <camunda.bpm.assert.version>7.0.0</camunda.bpm.assert.version>
@@ -64,6 +63,11 @@
       <artifactId>ddm-bpm-data-accessor</artifactId>
       <version>${ddm-bpm-data-accessor.version}</version>
     </dependency>
+    <dependency>
+      <groupId>com.epam.digital.data.platform</groupId>
+      <artifactId>ddm-idm-client</artifactId>
+      <version>${ddm-idm-client.version}</version>
+    </dependency>
 
     <dependency>
       <groupId>org.projectlombok</groupId>
@@ -80,12 +84,6 @@
       <groupId>org.camunda.spin</groupId>
       <artifactId>camunda-spin-core</artifactId>
       <version>1.9.0</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.keycloak</groupId>
-      <artifactId>keycloak-admin-client</artifactId>
-      <version>${keycloak-admin-client.version}</version>
     </dependency>
 
     <!-- ddm starters -->
