[EDP-DDM-11874] updated ddm-idm-client version usage
Change-Id: If730f08af78a9fb0339737e3ab6eb98016bdc789

--- a/src/it/resources/application-test.yml
+++ b/src/it/resources/application-test.yml
@@ -6,7 +6,7 @@ spring:
     password: password
 
 keycloak:
-  url: http://localhost:8200/auth
+  url: http://localhost:8200
   system-user:
     realm: test-realm
     client-id: client-id
