--- a/pom.xml
+++ b/pom.xml
@@ -7,12 +7,12 @@
   <parent>
     <groupId>com.epam.digital.data.platform</groupId>
     <artifactId>low-code-platform-parent</artifactId>
-    <version>1.5.1-SNAPSHOT</version>
+    <version>1.6.0.1</version>
     <relativePath/>
   </parent>
 
   <artifactId>ddm-starter-juel-function</artifactId>
-  <version>1.5.8-SNAPSHOT</version>
+  <version>1.6.0</version>
 
   <properties>
     <sonar.coverage.exclusions>**/digital/data/platform/el/juel/dto/**/*</sonar.coverage.exclusions>
@@ -22,10 +22,10 @@
     <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.target>${java.version}</maven.compiler.target>
 
-    <ddm-starter-security.version>1.5.1-SNAPSHOT</ddm-starter-security.version>
-    <ddm-form-data-storage.version>1.5.2-SNAPSHOT</ddm-form-data-storage.version>
+    <ddm-starter-security.version>1.6.0.1</ddm-starter-security.version>
+    <ddm-form-data-storage.version>1.6.0.1</ddm-form-data-storage.version>
     <ddm-bpm-data-accessor.version>1.5.7-SNAPSHOT</ddm-bpm-data-accessor.version>
-    <ddm-idm-client.version>1.5.1-SNAPSHOT</ddm-idm-client.version>
+    <ddm-idm-client.version>1.6.0.1</ddm-idm-client.version>
 
     <guava.version>29.0-jre</guava.version>
     <camunda.bpm.assert.version>7.0.0</camunda.bpm.assert.version>
