--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 
     <ddm-starter-security.version>1.6.0.1</ddm-starter-security.version>
     <ddm-form-data-storage.version>1.6.0.1</ddm-form-data-storage.version>
-    <ddm-bpm-data-accessor.version>1.5.7-SNAPSHOT</ddm-bpm-data-accessor.version>
+    <ddm-bpm-data-accessor.version>1.6.0.1</ddm-bpm-data-accessor.version>
     <ddm-idm-client.version>1.6.0.1</ddm-idm-client.version>
 
     <guava.version>29.0-jre</guava.version>
