--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   </parent>
 
   <artifactId>ddm-starter-juel-function</artifactId>
-  <version>1.6.0</version>
+  <version>1.7.0</version>
 
   <properties>
     <sonar.coverage.exclusions>**/digital/data/platform/el/juel/dto/**/*</sonar.coverage.exclusions>
@@ -23,9 +23,10 @@
     <maven.compiler.target>${java.version}</maven.compiler.target>
 
     <ddm-starter-security.version>1.6.0.1</ddm-starter-security.version>
-    <ddm-form-data-storage.version>1.6.0.1</ddm-form-data-storage.version>
+    <ddm-form-data-storage.version>1.7.0.1</ddm-form-data-storage.version>
     <ddm-bpm-data-accessor.version>1.6.0.1</ddm-bpm-data-accessor.version>
     <ddm-idm-client.version>1.6.0.5</ddm-idm-client.version>
+    <ddm-message-payload-storage.version>1.7.0.2</ddm-message-payload-storage.version>
 
     <guava.version>29.0-jre</guava.version>
     <camunda.bpm.assert.version>7.0.0</camunda.bpm.assert.version>
@@ -57,6 +58,11 @@
       <groupId>com.epam.digital.data.platform</groupId>
       <artifactId>ddm-form-data-storage</artifactId>
       <version>${ddm-form-data-storage.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.epam.digital.data.platform</groupId>
+      <artifactId>ddm-message-payload</artifactId>
+      <version>${ddm-message-payload-storage.version}</version>
     </dependency>
     <dependency>
       <groupId>com.epam.digital.data.platform</groupId>
